refactor: dashboard component update name styles

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
   <!-- Content starts here -->
   <div>
     <div class="font-medium accent-black">Hello, it's me</div>
-    <h1 class="text-xl italic">Sangay Yonten.</h1>
+    <h1 class="content-name">Sangay <span class="content-name--dot md:-ml-3 xs:-ml-2">.</span></h1>
 
     <p class="font-medium">
       An enthusiastic software developer currently shaping the future of software development by
@@ -12,7 +12,7 @@
       the world.
     </p>
     <h1 style="transform: translate3d(0px, 57px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-        class="heading-2 titlesd">Software Developer</h1>
+        class="font-medium italic">Software Developer</h1>
   </div>
   <!-- Content ends here -->
 </div>
