--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="bg-white border-gray-200 sticky top-0 flex md:flex-row md:justify-between md:px-20 md:py-6 xs:flex-col xs:justify-center xs:p-6 xs:py-2 dark:bg-gray-900">
   <div class="w-full flex flex-wrap items-center justify-between">
     <a href="https://flowbite.com/" class="flex items-center">
-      <img src="https://flowbite.com/docs/images/logo.svg" class="h-6 mr-3 sm:h-9" alt="Landing Logo" />
+      <img src="favicon.ico" class="h-6 mr-3 sm:h-9" alt="Landing Logo" />
       <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Cortez</span>
     </a>
     <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
