--- a/src/assets/styles/_common.scss
+++ b/src/assets/styles/_common.scss
@@ -27,7 +27,7 @@ p {
 .content {
   height: fit-content;
   display: flex;
-  margin: 72px auto 100px;
+  margin: 5em auto 7em;
   max-width: 560px;
   flex-direction: column;
   align-items: center;
@@ -36,6 +36,10 @@ p {
     position: relative;
     font-size: 6.5em;
     margin: 0;
+
+    @media screen and (max-width: 480px) {
+      font-size: 4em;
+    }
 
     &--dot {
       color: #5f99ff;
@@ -56,3 +60,15 @@ footer a {
 }
 
 /* Responsive Styles -- include below */
+
+@media screen and (max-width: 480px) {
+  .content {
+    height: fit-content;
+    display: flex;
+    margin: 4em 1.5em 6em;
+
+    &-name {
+      font-size: 4em;
+    }
+  }
+}
