refactor: upadte package-lock and changed components

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
   <!-- Content starts here -->
   <div>
     <div class="font-medium accent-black">Hello, it's me</div>
-    <h1 class="content-name">Sangay <span class="content-name--dot md:-ml-3">.</span></h1>
+    <h1 class="content-name font--bold">Sangay <span class="content-name--dot md:-ml-3">.</span></h1>
 
     <p class="font-medium">
       An enthusiastic software developer currently shaping the future of software development by
