--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-white border-gray-200 sticky top-0 flex md:flex-row md:justify-between md:px-20 md:py-6 xs:flex-col xs:justify-center xs:p-6 xs:py-2 dark:bg-gray-900">
+<nav class="bg-white border-gray-200 sticky top-0 z-10 flex md:flex-row md:justify-between md:px-20 md:py-6 xs:flex-col xs:justify-center xs:p-6 xs:py-2 dark:bg-gray-900">
   <div class="w-full flex flex-wrap items-center justify-between">
     <a href="https://flowbite.com/" class="flex items-center">
       <img src="../../../favicon.ico" class="h-12 mr-3 max-sm:h-8" alt="Landing Logo" />
