--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,10 +16,10 @@
           <a routerLink="about" class="block py-2 px-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a>
         </li>
         <li class="cursor-pointer hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700">
-          <a *ngIf="isDarkEnable" (click)="changeTheme()" mode-button [ngClass]="{'flex justify-center' : showMenu}" class="block py-2 px-3 animate-pulse">
+          <a *ngIf="isDarkEnable" (click)="changeTheme()" mode-button [ngClass]="{'flex justify-center' : showMenu}" class="block py-2 px-3 animate-pulse md:p-0">
             <img class="switch-icon" src="assets/images/light.svg" alt="light" />
           </a>
-          <a *ngIf="!isDarkEnable" (click)="changeTheme()" mode-button [ngClass]="{'flex justify-center' : showMenu}" class="block py-2 px-3 animate-pulse">
+          <a *ngIf="!isDarkEnable" (click)="changeTheme()" mode-button [ngClass]="{'flex justify-center' : showMenu}" class="block py-2 px-3 animate-pulse md:p-0">
             <img class="switch-icon" src="assets/images/dark.svg" alt="dark" />
           </a>
         </li>
