feat: add landing page image

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
-<div class="content" role="main">
+<div class="content flex items-center md:mt-20 lg:mx-60 sm:mx-44 md:mb-24" role="main">
   <!-- Content starts here -->
-  <div>
+  <div class="flex flex-col w-fit">
     <div class="font-medium accent-black">Hello, it's me</div>
     <h1 class="content-name font--bold">Sangay <span class="content-name--dot md:-ml-3">.</span></h1>
 
@@ -13,5 +13,6 @@
     <h1 style="transform: translate3d(0px, 57px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
         class="font-medium italic">Software Developer</h1>
   </div>
+  <img src="assets/images/bg.png" class="max-lg:hidden content--image" alt="Landing background"/>
   <!-- Content ends here -->
 </div>
