--- a/src/assets/styles/_common.scss
+++ b/src/assets/styles/_common.scss
@@ -26,11 +26,6 @@ p {
 
 .content {
   height: fit-content;
-  display: flex;
-  margin: 5em auto 7em;
-  max-width: 560px;
-  flex-direction: column;
-  align-items: center;
 
   &-name {
     position: relative;
@@ -40,6 +35,11 @@ p {
     &--dot {
       color: #5f99ff;
     }
+  }
+
+  &--image {
+    width: 360px;
+    height: 360px;
   }
 }
 
@@ -59,8 +59,8 @@ footer a {
 
 @media screen and (max-width: 480px) {
   .content {
-    height: fit-content;
     display: flex;
+    flex-direction: column;
     margin: 4em 1.5em 6em;
 
     &-name {
