--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,17 +1,17 @@
-<div class="content flex items-center md:mt-8 lg:mx-60 sm:mx-44 md:mb-24" role="main">
+<div class="content flex items-center md:pt-8 lg:px-60 sm:px-44 md:pb-24 bg-gray-900 dark:bg-white" role="main">
   <!-- Content starts here -->
   <div class="flex flex-col w-fit">
-    <div class="font-medium accent-black">Hello, it's me</div>
-    <h1 class="content-name font--bold">Sangay <span class="content-name--dot md:-ml-3">.</span></h1>
+    <div class="font-medium text-white dark:text-black">Hello, it's me</div>
+    <h1 class="content-name font--bold text-white dark:text-black">Sangay <span class="content-name--dot md:-ml-3">.</span></h1>
 
-    <p class="font-medium">
+    <p class="font-medium text-white dark:text-black">
       An enthusiastic software developer currently shaping the future of software development by
       designing and implementing smooth user-interfaces that promote user interaction with information and data. While
       exploring S.O.T.A. frameworks and libraries around
       the world.
     </p>
     <h1 style="transform: translate3d(0px, 57px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-        class="font-medium italic">Software Developer</h1>
+        class="font-medium italic text-white dark:text-black">Software Developer</h1>
   </div>
   <img src="assets/images/bg.png" class="max-lg:hidden content--image" alt="Landing background"/>
   <!-- Content ends here -->
